developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_contextex_has_invalid_offset_long.kmn
store(&TARGETS) 'any'

begin Unicode > use(main)

store(cons) 'bcd'

group(main) using keys

c ERROR_ContextExHasInvalidOffset: `context(2)` is longer than range
any(cons) + 'a' > 'x' context(2) 'z'

